kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp-svc
  labels:
    app: demo-webapp-svc
spec:
  type: NodePort
  selector:
    app: demo-webapp-svc
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
