kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: demo-webapp
  labels:
    app: demo-webapp
spec:
  tls:
    - hosts:
        - demo.app.com
      secretName: demo-webapp-cert-secret
  rules:
    - host: demo.app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-webapp-svc
                port:
                  number: 80
